# rest-api-template

./: .gitignore  Makefile  README.md  compose.yml  docker_ps_a  eligible_naics_desc.xlsx  ingest_eligible_naics_desc.py  naics.db  project.md  pyproject.toml  requirements.txt  tree
api/: logger.py  main.py
api/models/: base_request.py
app/: Dockerfile  main.py  pyproject.toml  utils.py
model/: __init__.py  pricing_model.py
model/src/interfaces/: naics_to_hit_ratio_mapper.py
tests/: test_api.py  test_basic_pricing_model.py  test_pricing_client.py  test_utils.py
