[project]
name = "rest-api-template"
version = "0.1.0"
description = "A template for a REST API using FastAPI and Pydantic. Intended for insurance use cases."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.2",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.12",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "--tb=short --maxfail=1"

[project.scripts]
api = "api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "src/api", "src/model"]
