[project]
name = "elligible-naics-service"
version = "0.1.0"
description = "REST API service that accepts an input naics code and returns an object with CLD hit ratio, CLD decline ratio, submission count"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.2",
    "uvicorn>=0.34.0",
    "asyncio>=3.4.3",
    "httpx>=0.28.1",
    "streamlit>=1.44.1",
    "polars>=1.27.1",
    "duckdb>=1.2.2",
    "fastexcel>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "--tb=short --maxfail=1"

[project.scripts]
api = "api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "src/api", "src/model", "src/app"]
